# storysphere

./: .env.example  .gitignore  CLAUDE.md  README.md  cspell.json  data_processor.py  example.py  llm_interface.py  main_test_character_analysis.py  main_test_entity_retriever.py  main_test_extractor.py  main_test_hiearchical.py  main_test_indexing.py  main_test_kg.py  main_test_llm_interface  main_test_prompt.py  main_test_run_doc_ingestion.py  pdf_processor.py  pyproject.toml  requirements.txt  test_prompt_templates.py  test_templates.py  test_token_counter.py  ttt.py  vector_process_store.py  vector_store.py
.claude/: settings.json  settings.local.json
config/: schema_kg_story.yaml
config/character_analysis/: jung_archetypes_en.json  schmidt_archetypes_zh.json
data/kg_storage/: canonical_entity_attributes.json  entity_df.csv  kg_elements.json  kg_entity_set.json  kg_relation_set.json  relation_df.csv
data/kg_storage_afterdatastore/: kg_elements.json  kg_entity_set.json  kg_relation_set.json
docs/: API_CONTRACT.md  BACKLOG.md  BACKLOG_ARCHIVE.md  BACKLOG_NEW_FEATURES.md  CORE.md  DESIGN_TOKENS.md  DOCS_STRUCTURE_PROPOSAL.md  DOCUMENTATION_STRUCTURE.md  FRONTEND_DEV_GUIDE.md  UI_SPEC.md  domain-glossary.md  pyproject.toml  type-generation.md
docs/appendix/: ADR_001_FULL.md  ADR_002_FULL.md  ADR_003_FULL.md  ADR_004_FULL.md  ADR_005_FULL.md  ADR_006_FULL.md  ADR_007_FULL.md  ADR_008_FULL.md  ADR_009_FULL.md  PARALLEL_IMPL.md  TOOLS_CATALOG.md
docs/guides/: API_TESTING.md  FRONTEND_DEV_PLAN.md  LANGFUSE_SETUP.md  LANGSMITH_SETUP.md  PHASE_10_TENSION_ANALYSIS.md  PHASE_11_NARRATOLOGY.md  PHASE_2B_KEYWORDS.md  PHASE_2_PIPELINES.md  PHASE_3_TOOLS.md  PHASE_4_CHAT_AGENT.md  PHASE_5B_EVENT_ANALYSIS.md  PHASE_5_DEEP_ANALYSIS.md  PHASE_6_OPTIMIZATION.md  PHASE_7_MONITORING.md  PHASE_8_API.md  PHASE_9_TEMPORAL_TIMELINE.md  TESTING.md
docs/handoff/20260711-upload-ux/: 01-design-brief.md  02-tokens.css  README.md
docs/handoff/20260711-upload-ux/i18n/: common.zh-TW.json  upload.en.json  upload.zh-TW.json
docs/handoff/20260711-upload-ux/sample-payloads/: task-status-done.json  task-status-error.json  task-status-partial.json  task-status-review.json  task-status-running.json
docs/handoff/20260716-character-page/: 01-design-brief.md  04-UI_SPEC.md  README.md
docs/handoff/20260716-character-page/design-return/: Character Analysis.dc.html  DESIGN_README.md
docs/handoff/20260716-character-page/sample-payloads/: characters-list.json  entity-analysis.json  epistemic-state-ch7.json  factions.json
docs/handoff/20260722-event-analysis-redesign/: 01-design-brief.md  03-DESIGN_TOKENS.md  README.md
docs/handoff/20260722-event-analysis-redesign/i18n/: analysis.zh-TW.json
docs/handoff/20260722-event-analysis-redesign/sample-payloads/: eep-complete.json  event-list.json
docs/notes/: narratology_analysis_design_notes.md  symbolic_analysis_design_notes.md  tension_analysis_design_notes.md
docs/notes/archived/: event-as-graph-node.md
docs/plans/: 20260429-theme-system-bw.md  20260505-i001-lightweight-deployment.md  20260505-i003-primary-llm-provider.md  20260507-murmur-window.md  20260508-chapter-review.md  20260508-ingest-fault-tolerance.md  20260508-langgraph-hitl-ingestion.md  20260516-character-analysis-page-redesign.md  20260516-kg-page-redesign.md  20260517-kg-page-redesign-v1-impl.md  20260518-event-analysis-page-redesign.md  20260519-character-batch-generation.md  20260519-timeline-page-redesign.md  20260525-symbols-page-redesign.md  20260525-tension-page-redesign.md  20260526-build-overview-redesign-brief.md  20260526-build-overview-redesign.md  20260528-f16-faction-detection.md  20260529-settings-page-redesign.md  20260601-narrative-page-hero-journey.md  20260603-genette-frontend-display.md  20260613-b1-font-size-scale-snap.md  20260613-frontend-design-review.md  20260626-llm-task-center.md  20260627-partial-analysis-three-state-plan.md  20260627-partial-analysis-three-state.md  20260701-repo-structure-refactor.md  20260702-ux-refinements.md  20260703-chat-agent-followups.md  20260703-chat-tool-context-persistence.md  20260703-entity-tracking-kg-id-alignment.md  20260704-book-upload-revamp.md  20260705-chapter-review-frontmatter.md  20260706-boundary-role-suggester.md  20260708-chapter-review-redesign-handoff.md  20260708-security-audit-remediation.md  20260709-paragraph-inline-split.md  20260710-design-system-v2-gaps-for-design.md  20260710-design-system-v2-ink-on-paper.md  20260711-upload-flow-backend-plan.md  (+10 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx
scripts/: explore_api.py
src/: example.py
src/agents/: analysis_agent.py  chat_agent.py  chat_agent_base.py  deep_chat_agent.py  pattern_recognizer.py  states.py  timeline_agent.py
src/api/: deps.py  main.py  review_registry.py  store.py  task_registry.py  ws_manager.py
src/config/: archetypes.py  settings.py
src/core/: __init__.py  data_store.py  gather_parts.py  language_detection.py  llm_client.py  metrics.py  nlp_utils.py  token_callback.py  token_store.py  tracing.py  vector_process_store.py
src/domain/: __init__.py  documents.py  entities.py  epistemic_state.py  events.py  imagery.py  inferred_relations.py  narrative.py  relations.py  symbol_analysis.py  temporal.py  tension.py  timeline.py  voice_profile.py
src/pipelines/: base.py  concept_inference.py  temporal_pipeline.py
src/prompt_templates/: API_REFERENCE.md  base_templates.py  builders.py  components.py  manager.py  prompt_loader.py  registry.py  template.py
src/prompt_templates_neo/: DEVELOPER_GUIDE.md  README.md  builders.py  components.py  manager.py  prompt_loader.py  registry.py  template.py
src/prompt_templates_old/: base_templates.py  template_builder.py  template_manager.py
src/services/: __init__.py  analysis_cache.py  analysis_models.py  analysis_service.py  document_service.py  epistemic_state_service.py  extraction_service.py  (+19 more)
test/: test_vector_process_store.py
tests/: conftest.py  test_llm_client.py  test_vector_process_store.py
(+690 files in other folders)
