[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/api",
    "src/config",
    "src/core",
    "src/domain",
    "src/pipelines",
    "src/services",
    "src/tools",
    "src/workflows",
]

[project]
name = "storysphere"
version = "0.1.0"
description = "Intelligent Novel Analysis System with Agent-Driven Architecture"
authors = [
    {name = "William", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # ========== Core Framework ==========
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",

    # ========== LLM Providers ==========
    "google-generativeai>=0.8.0",
    "langchain-google-genai>=2.0.0",
    "openai>=1.0",
    "langchain-openai>=0.2.0",
    "anthropic>=0.40",
    "langchain-anthropic>=0.3.0",

    # ========== Data Storage ==========
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
    "qdrant-client>=1.7",

    # ========== Knowledge Graph ==========
    "networkx>=3.0",
    "neo4j>=5.0",

    # ========== Web Framework ==========
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # ========== Document Processing ==========
    "pypdf>=4.0",
    "python-docx>=1.1",

    # ========== Embeddings ==========
    "sentence-transformers>=3.0",
    "langchain-huggingface>=0.1.0",

    # ========== Keyword Extraction ==========
    "yake>=0.4.8",

    # ========== Utilities ==========
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipython>=8.20",
    "ipdb>=0.13",
]

# ========== Black Configuration ==========
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# ========== Ruff Configuration ==========
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# ========== Pytest Configuration ==========
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call real external APIs (deselect with -m 'not integration')",
]

# ========== MyPy Configuration ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ========== Coverage Configuration ==========
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
