[project]
name = "storysphere"
version = "0.1.0"
description = "Intelligent Novel Analysis System with Agent-Driven Architecture"
authors = [
    {name = "William", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # ========== Core Framework ==========
    "langchain>=0.1.0",                    # Agent framework
    "langgraph>=0.0.20",                   # State machine for complex workflows
    "pydantic>=2.0",                       # Data validation
    "tenacity>=8.0",                       # Retry mechanism (exponential backoff)

    # ========== LLM Providers ==========
    "google-generativeai>=0.4.0",          # Gemini (Primary) ⭐
    "openai>=1.0",                         # OpenAI (Fallback)
    "anthropic>=0.18",                     # Claude (Fallback)

    # ========== Data Storage ==========
    "sqlalchemy>=2.0",                     # ORM
    "aiosqlite>=0.19",                     # Async SQLite driver
    "qdrant-client>=1.7",                  # Vector database

    # ========== Knowledge Graph ==========
    "networkx>=3.0",                       # Graph processing (default, in-memory)
    "neo4j>=5.0",                          # Graph database (optional, Docker) ⭐

    # ========== Web Framework ==========
    "fastapi>=0.110",                      # API framework
    "uvicorn[standard]>=0.27",             # ASGI server
    "websockets>=12.0",                    # WebSocket support ⭐
    "python-multipart>=0.0.9",             # File upload support

    # ========== Document Processing ==========
    "pypdf>=4.0",                          # PDF parsing
    "python-docx>=1.1",                    # DOCX parsing

    # ========== Utilities ==========
    "python-dotenv>=1.0",                  # Environment variables
    "pyyaml>=6.0",                         # YAML config
    "httpx>=0.27",                         # HTTP client (async)
]

[dependency-groups]
dev = [
    # ========== Testing ==========
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",

    # ========== Code Quality ==========
    "black>=24.0",                         # Code formatter
    "ruff>=0.3",                           # Linter (fast)
    "mypy>=1.8",                           # Type checker

    # ========== Development Tools ==========
    "ipython>=8.20",                       # Better REPL
    "ipdb>=0.13",                          # Debugger
]

# ========== Black Configuration ==========
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# ========== Ruff Configuration ==========
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

# ========== Pytest Configuration ==========
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# ========== MyPy Configuration ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ========== Coverage Configuration ==========
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
